--- a/scss/settings/variables/_colors.scss
+++ b/scss/settings/variables/_colors.scss
@@ -6,13 +6,16 @@ $color-body-bg: #ffffff !default;
 $color-surface: #ffffff !default;
 $color-body-text: #212925 !default;
 $color-muted: #858585 !default;
-$color-border: #e5e5e5 !default;
+$color-border: #dbdddd !default;
 $color-border-hover: #cccccc !default;
 
-$color-link: #0f5c8c !default;
-$color-link-hover: #0b4c74 !default;
+$color-link: #43489d !default;
+$color-link-hover: #343777 !default;
 
 $color-success: #1f7a4b !default;
 $color-info:    #0f5c8c !default;
 $color-warning: #b7791f !default;
 $color-danger:  #b03a2e !default;
+
+$color-fill-white: #fff;
+$color-fill-black: #000;
