--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -53,7 +53,7 @@
   background-color: #fff;
   color: #000;
 
-  padding: calc(var(--space-1) * 1.15) var(--space-2);
+  padding: calc(var(--space-1) * 1.5) calc(var(--space-2) * 1.75);
 
   &:hover:not([class~="btn--primary"]):not([class~="btn--secondary"]):not([class~="btn--accent"]):not([class~="btn--highlight"]):not([class~="btn--quiet"]):not([class~="btn--link"]) {
     $hover-color: color.mix(#000, #fff, 8%);
@@ -63,7 +63,7 @@
   }
 
   &--big {
-    padding: calc(var(--space-3) - 1px) var(--space-4);
+    padding: calc(var(--space-3) - 1px) var(--space-3);
   }
 
   line-height: 1.2;
@@ -71,7 +71,7 @@
   text-decoration: none;
 
   border: 1px solid var(--color-border);
-  border-radius: var(--radius-1);
+  border-radius: var(--button-border-radius);
 
   cursor: pointer;
   transition: background-color 200ms ease-in-out, color 200ms ease-in-out, border-color 200ms ease-in-out;
