--- a/scss/layout/_columns.scss
+++ b/scss/layout/_columns.scss
@@ -1,6 +1,10 @@
 /* components/_columns.scss */ 
 
+@use "sass:map";
+
 @use '../settings/mixins' as m;
+
+$sizes: ("20": 20, "25": 25, "33": 33, "40": 40, "50": 50, "60": 60, "66": 66, "75": 75, "80": 80, "100": 100 ) !default;
 
 .columns {
   display: flex;
@@ -16,5 +20,12 @@
     flex-grow: 1;
     flex-shrink: 1;
     padding: var(--column-gap);
+
+    @each $name, $value in $sizes {
+      &--#{$name} {
+        width: #{$value} + '%';
+        flex: none;
+      }
+    }
   }
 }
