--- a/scss/settings/variables/_radius.scss
+++ b/scss/settings/variables/_radius.scss
@@ -1,3 +1,4 @@
 $radius-base: 1rem !default;
 $button-border-radius: 4px !default;
 $radius-multipliers: 0, 0.125, 0.25, 0.375, 0.5, 1 !default;
+$input-radius: 0.175rem;
