--- a/scss/settings/variables/_shadows.scss
+++ b/scss/settings/variables/_shadows.scss
@@ -4,3 +4,5 @@ $shadows: (
   2: 0 .25rem 0.5rem rgba(black, .075),
   3: 0 1rem 3rem rgba(black, .125)
 ) !default;
+
+$input-focus-shadow-size: 0 0 0 0.1875em !important;
