--- a/scss/settings/variables/_spacing.scss
+++ b/scss/settings/variables/_spacing.scss
@@ -1,3 +1,5 @@
+/* settings/variables/_spacing.scss */ 
+
 $default-spacer: 1rem !default;
 $spacing-multipliers: 0, 0.25, 0.5, 1, 1.5, 3, 6;
 $column-gap: 0.75rem !default;
