--- a/scss/base/_code.scss
+++ b/scss/base/_code.scss
@@ -1,4 +1,5 @@
-// code
+/* base/_code.scss */
+
 code {
   font-family: var(--font-monospace);
   font-size: 0.95em; // slightly smaller feels nicer inline
