--- a/scss/settings/variables/_colors.scss
+++ b/scss/settings/variables/_colors.scss
@@ -1,3 +1,5 @@
+// settings/variables/_colors.scss
+
 $color-primary: #1f7a5c !default;
 $color-secondary: #434849 !default;
 $color-accent: #643173 !default;
