--- a/scss/components/_card.scss
+++ b/scss/components/_card.scss
@@ -1,10 +1,8 @@
 /* components/_card.scss */
 
-
 .card {
-  background: var(--color-secondary, #fff);
-  border: 1px solid rgba(0, 0, 0, 0.12);
-  border-radius: var(--radius-1);
+  background: var(--color-white, #fff);
+  border-radius: var(--radius-4);
   padding: var(--space-4);
   
   &--outline {
@@ -18,7 +16,7 @@
 
   &--elevated {
     border-color: rgba(0, 0, 0, 0.08);
-    box-shadow: var(--shadow-2);
+    box-shadow: var(--shadow-1);
   }
 
   &__title {
